# runi-thesis-project

./: .env  .gitignore  README.md  Taskfile.yml  analyze_patentmatch.ipynb  azure_auth.py  check_pydantic.py  cli.py  convert_mapping_json.py  create_openai_batches.py  create_openai_train_jsonl.py  create_test_file_uploads.py  docker-compose.yml  get_dataset_file_response.py  lis_openai_files.py  list_openai_batches.py  main.py  prepare_azure_datasets.py  prepare_test_data.py  pyproject.toml  replace_model_gpt4.py  run_several_openai_batches.py  run_single_batch_openai.py  run_test_data_batches.py  upload_openai_gpt4o_files.py
.devcontainer/: devcontainer.json
hidrive/patentmatch_test/: openai_files_gpt4o_mapping_test.json
models/pairwise_classifiers/: model.py
notebooks/: negation_openai.ipynb  negation_test_openai.ipynb
notebooks/output_jsonl/: batch_0.jsonl  batch_1.jsonl  batch_10.jsonl  batch_100.jsonl  batch_101.jsonl  batch_102.jsonl  batch_103.jsonl  batch_104.jsonl  batch_105.jsonl  batch_106.jsonl  batch_107.jsonl  batch_108.jsonl  batch_109.jsonl  batch_11.jsonl  batch_110.jsonl  batch_111.jsonl  batch_112.jsonl  batch_113.jsonl  batch_114.jsonl  batch_115.jsonl  batch_116.jsonl  batch_117.jsonl  batch_118.jsonl  batch_119.jsonl  batch_12.jsonl  batch_120.jsonl  batch_121.jsonl  batch_122.jsonl  batch_123.jsonl  batch_124.jsonl  batch_125.jsonl  batch_126.jsonl  batch_127.jsonl  batch_128.jsonl  batch_129.jsonl  batch_13.jsonl  batch_130.jsonl  batch_131.jsonl  batch_132.jsonl  batch_133.jsonl  (+334 more)
runi_thesis_project/clients/: aiopika_df.py
(+376 files in other folders)
