[project]
name = "runi-thesis-project"
version = "0.1.0"
description = "A short description of the project."
readme = "README.md"
dependencies = [
    "aio-pika>=9.5.4",
    "aiohttp>=3.11.11",
    "pydash>=8.0.4",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["runi-thesis-project"]
