[project]
name = "runi-thesis-project"
version = "0.1.0"
description = "A short description of the project."
readme = "README.md"
dependencies = [
    "aio-pika>=9.5.4",
    "aiohttp>=3.11.11",
    "openai>=1.59.5",
    "pydantic>=2.10.4",
    "pydash>=8.0.4",
    "tiktoken>=0.8.0",
    "tqdm>=4.67.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["runi-thesis-project"]
