[project]
name = "runi-thesis-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.12",
    "azure-identity>=1.20.0",
    "azure-keyvault>=4.2.0",
    "jupyter>=1.1.1",
    "openai>=1.63.2",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
]
